feat: 更新部分详情

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -53,3 +53,10 @@
   background-color: #fff;
   border-radius: 10px;
 }
+.super_link {
+  color: #507daf;
+  cursor: pointer;
+}
+.super_link:hover {
+  color: #155fb3;
+}
