--- a/src/style/common.less
+++ b/src/style/common.less
@@ -42,6 +42,7 @@
 }
 
 .custom-scroll {
+
   /* WebKit browsers */
   &::-webkit-scrollbar {
     width: 6px;
@@ -66,4 +67,13 @@
   -ms-overflow-style: none;
   scrollbar-width: 6px;
   scrollbar-color: #8f8f8f #fff;
+}
+
+.super_link {
+  color: #507daf;
+  cursor: pointer;
+
+  &:hover {
+    color: #155fb3;
+  }
 }
