feat: 歌单获取与详情跳转实现

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -55,3 +55,12 @@
     display: none;
   }
 }
+
+.triangle {
+  width: 0;
+  height: 0;
+  line-height: 0;
+  font-size: 0;
+  border: 3px solid transparent;
+  border-left-color: #999;
+}
