--- a/src/style/common.css
+++ b/src/style/common.css
@@ -43,3 +43,11 @@
 .hidden_scroll::-webkit-scrollbar {
   display: none;
 }
+.triangle {
+  width: 0;
+  height: 0;
+  line-height: 0;
+  font-size: 0;
+  border: 3px solid transparent;
+  border-left-color: #999;
+}
