feat: 实现自定义歌曲Jay获取与播放(详情页todo)

--- a/src/layout/detail/index.module.less
+++ b/src/layout/detail/index.module.less
@@ -1,3 +1,4 @@
+// 该class用于实现详情歌词上方和下方的渐变白色模糊效果
 .vague {
   position: relative;
 
@@ -20,6 +21,7 @@
   }
 }
 
+// 隐藏歌词滚动条
 .hidden_scroll {
   /* webkit */
   &::-webkit-scrollbar {
