--- a/src/style/index.less
+++ b/src/style/index.less
@@ -13,7 +13,7 @@
   font-weight: 400;
 
   color: #000000;
-  background-color: #ffffff;
+  background-color: transparent;
 
   user-select: none;
   font-synthesis: none;
@@ -31,6 +31,7 @@ body,
   margin: 0;
   padding: 0;
   overflow: hidden;
+  border-radius: 1rem;
 }
 
 * {
