--- a/src/style/index.css
+++ b/src/style/index.css
@@ -57,10 +57,10 @@
   width: 100%;
   height: 100%;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-weight: 400;
-  color: #000000;
+  color: #000;
   background-color: transparent;
   user-select: none;
   font-synthesis: none;
@@ -85,18 +85,18 @@ body,
   /* Firefox */
   /* Edge */
   -ms-overflow-style: none;
-  scrollbar-width: 6px;
+  scrollbar-width: 8px;
   scrollbar-color: #8f8f8f #fff;
 }
 *::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
 }
 *::-webkit-scrollbar-thumb {
   background-color: #8f8f8f;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 *::-webkit-scrollbar-track {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
 }
