--- a/src/style/index.less
+++ b/src/style/index.less
@@ -3,18 +3,15 @@
 @import "./common.less";
 @import "@/assets/iconfont/iconfont.css";
 
-
 :root {
   width: 100%;
   height: 100%;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-weight: 400;
-
-  color: #000000;
+  color: #000;
   background-color: transparent;
-
   user-select: none;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -39,26 +36,26 @@ body,
 
   /* WebKit browsers */
   &::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: @scroll-width;
+    height: @scroll-width;
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: #8f8f8f;
-    border-radius: 10px;
+    border-radius: @scroll-width;
   }
 
   &::-webkit-scrollbar-track {
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: @scroll-width;
   }
 
   /* Firefox */
-  scrollbar-width: 6px;
+  scrollbar-width: @scroll-width;
   scrollbar-color: #8f8f8f #fff;
 
   /* Edge */
   -ms-overflow-style: none;
-  scrollbar-width: 6px;
+  scrollbar-width: @scroll-width;
   scrollbar-color: #8f8f8f #fff;
 }
