--- a/src/style/index.css
+++ b/src/style/index.css
@@ -71,14 +71,12 @@
 }
 html,
 body,
-#root,
-#hotKey {
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  border-radius: 1rem;
 }
 * {
   /* WebKit browsers */
