--- a/src/style/index.less
+++ b/src/style/index.less
@@ -22,14 +22,12 @@
 
 html,
 body,
-#root,
-#hotKey {
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  border-radius: 1rem;
 }
 
 * {
