--- a/src/style/index.css
+++ b/src/style/index.css
@@ -80,21 +80,19 @@ body,
 }
 * {
   /* WebKit browsers */
-  /* Firefox */
-  /* Edge */
-  -ms-overflow-style: none;
-  scrollbar-width: 8px;
-  scrollbar-color: #8f8f8f #fff;
 }
 *::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #8f8f8f;
+  background-color: #e0e0e0;
   border-radius: 8px;
 }
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #d4d4d4;
+}
 *::-webkit-scrollbar-track {
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 8px;
 }
